--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,13 +12,13 @@
 							<% @pagamento_despesas.each do |pagamento| %>
 								<p>
 								  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
-								  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+								  <span style="color:#006400"><%= pagamento.valor.real_formatado %></span>
 								</p>
 						 	<% end %>	
 						<br>
 							<p>
 							  <span style="color:#666"><b>Total:</b></span>
-							  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_despesa) %></b></span>
+							  <span style="color:#006400"><b><%= @total_pagamento_despesa.real_formatado %></b></span>
 							</p>
 						</div>
 						<br>
@@ -27,13 +27,13 @@
 							<% @ultimos_pagamentos.each do |pagamento| %>
 								<p>
 								  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
-								  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+								  <span style="color:#006400"><%= pagamento.valor.real_formatado %></span>
 								</p>
 						 	<% end %>	
 						<br>
 							<p>
 							  <span style="color:#666"><b>Total:</b></span>
-							  <span style="color:#006400"><b><%= number_to_currency(@total_ultimos_pagamentos) %></b></span>
+							  <span style="color:#006400"><b><%= @total_ultimos_pagamentos.real_formatado %></b></span>
 							</p>
 						</div>
 		    	    </td>
@@ -45,13 +45,13 @@
 							<% @pagamento_vendas.each do |pagamento| %>
 								<p>
 								  <span style="color:#666"><%= I18n.l(pagamento.data, :format => :mes) %>:</span>
-								  <span style="color:#006400"><%= number_to_currency(pagamento.valor) %></span>
+								  <span style="color:#006400"><%= pagamento.valor.real_formatado %></span>
 								</p>
 						 	<% end %>	
 						<br>
 							<p>
 							  <span style="color:#666"><b>Total:</b></span>
-							  <span style="color:#006400"><b><%= number_to_currency(@total_pagamento_venda) %></b></span>
+							  <span style="color:#006400"><b><%= @total_pagamento_venda.real_formatado %></b></span>
 							</p>
 						</div>
 						<br>
@@ -60,13 +60,13 @@
 							<% @ultimos_recebimentos.each do |recebimento| %>
 								<p>
 								  <span style="color:#666"><%= I18n.l(recebimento.data, :format => :mes) %>:</span>
-								  <span style="color:#006400"><%= number_to_currency(recebimento.valor) %></span>
+								  <span style="color:#006400"><%= recebimento.valor.real_formatado %></span>
 								</p>
 						 	<% end %>	
 						<br>
 							<p>
 							  <span style="color:#666"><b>Total:</b></span>
-							  <span style="color:#006400"><b><%= number_to_currency(@total_ultimos_recebimentos) %></b></span>
+							  <span style="color:#006400"><b><%= @total_ultimos_recebimentos.real_formatado %></b></span>
 							</p>
 						</div>
 				   </td>	
@@ -79,8 +79,8 @@
 							<% @formas_pagamento.each do |forma| %>
 								<p>
 								  <span style="color:#666"><%= forma.descricao_forma %>:</span>
-								  <span style="color:#006400"><%= number_to_currency(forma.valor) %></span>
-								  <span style="color:#1E90FF">&nbsp;<%= number_to_percentage(((forma.valor / @total_formas) * 100).round(1)) %></span>
+								  <span style="color:#006400"><%= forma.valor.real_formatado %></span>
+								  <span style="color:#1E90FF">&nbsp;<%= number_to_percentage(((forma.valor / @total_formas) * 100)) %></span>
 								</p>
 						 	<% end %>	
 						</div><br>
