--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -30,7 +30,7 @@
           <div class="clearfix">    
    	     	<%= f.label :telefone %>
 		<div class="input">
-	     	<%= f.text_field :telefone, :alt => 'phone' %>
+	     	<%= f.text_field :telefone, :class => 'mask-phone' %>
 	    </div>
       </div>
           <div class="clearfix">    
@@ -66,6 +66,5 @@
 <script>
 
  $('#cliente_nome').focus();
- $('#cliente_telefone').setMask();
-
+ 
 </script>
