--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -24,7 +24,7 @@
        <div class="clearfix">    
    	     <%= f.label :data %>
 		<div class="input">
-		 <%= f.text_field :data, :value => (I18n.l(@compra.data) if @compra.data) %>
+		 <%= f.text_field :data, :class => 'mask-date', :value => (I18n.l(@compra.data) if @compra.data) %>
 	    </div>
       </div>
        <div class="clearfix">    
@@ -49,7 +49,6 @@
 
 <script>
 $(function() {
- $('#compra_descricao').focus();
- $('#compra_data').datepicker({dateFormat : 'dd/mm/yy'});
+ $('#compra_descricao').focus(); 
 });
 </script>
