--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -5,7 +5,7 @@
 	<table class="zebra-striped">
 	  <tr class="pesquisa">
 		<th><%= t('compra.descricao') %>&nbsp;<%= f.text_field :descricao, :style=>'width: 200px;'  %>&nbsp;&nbsp;
-  		<%= t('compra.data') %>&nbsp;<%= f.text_field :data, :value => (I18n.l(@compra.data) if @compra.data) %>&nbsp;&nbsp;<%= f.submit t('botao.pesquisar'), :class => "btn primary" %></th>
+  		<%= t('compra.data') %>&nbsp;<%= f.text_field :data, :class => 'mask-date', :value => (I18n.l(@compra.data) if @compra.data) %>&nbsp;&nbsp;<%= f.submit t('botao.pesquisar'), :class => "btn primary" %></th>
 	 </tr>
 	</table>
 <% end %>
@@ -29,10 +29,10 @@
 	<td style="color:#666;text-align:center;"><% if (compra.default == 1) %><i class="icon-ok"></i><% end %></td>
   	<td style="color:#666"><%= compra.descricao %></td>
 	<td style="color:#1E90FF"><%= I18n.l(compra.data) if compra.data %></td>
-	<td style="color:#006400"><%= number_to_currency(compra.total_despesas) if compra.total_despesas %></td>
-	<td style="color:#006400"><%= number_to_currency(compra.total_com_retorno) if compra.total_com_retorno %></td>
-	<td style="color:#006400"><%= number_to_currency(compra.total_sem_retorno) if compra.total_sem_retorno %></td>
-	<td style="color:#006400"><%= number_to_currency(compra.total_retorno_produtos) if compra.total_retorno_produtos %></td>
+	<td style="color:#006400"><%= compra.total_despesas.real_formatado if compra.total_despesas %></td>
+	<td style="color:#006400"><%= compra.total_com_retorno.real_formatado if compra.total_com_retorno %></td>
+	<td style="color:#006400"><%= compra.total_sem_retorno.real_formatado if compra.total_sem_retorno %></td>
+	<td style="color:#006400"><%= compra.total_retorno_produtos.real_formatado if compra.total_retorno_produtos %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.detalhes'), compra %></td>
     <td style="color:#1E90FF"><%= link_to t('botao.editar'), edit_compra_path(compra)%></td>
     <td style="color:#1E90FF"><%= link_to t('botao.excluir'), compra, 
@@ -49,10 +49,3 @@
 
 <a href="<%= new_compra_path %>">
 	<button class="btn" name="btnpesquisa"><%= t('compra.acao.novo')%></button></a>
-
-<script>
-
-$(function() {
-  $('#compra_data').datepicker({dateFormat : 'dd/mm/yy'});
-});
-</script>
