--- a/app/views/fornecedores/_form.html.erb
+++ b/app/views/fornecedores/_form.html.erb
@@ -24,7 +24,7 @@
           <div class="clearfix">    
    	     <%= f.label :telefone %>
 		<div class="input">
-	     <%= f.text_field :telefone, :alt => 'phone' %>
+	     <%= f.text_field :telefone, :class => 'mask-phone' %>
 	    </div>
       </div>
           <div class="clearfix">    
@@ -66,6 +66,5 @@
 <script>
 
  $('#fornecedor_nome').focus();
- $('#fornecedor_telefone').setMask();
-
+ 
 </script>
