--- a/app/views/pagamento_vendas/index.html.erb
+++ b/app/views/pagamento_vendas/index.html.erb
@@ -40,9 +40,9 @@
 	<% else %>		
 		<td style="color:#1E90FF"><%= I18n.l(pagamento_venda.data) if pagamento_venda.data %></td>		
 	<% end %>
-    <td style="color:#006400"><%= number_to_currency(pagamento_venda.valor) if pagamento_venda.valor %></td>        
-    <td style="color:#006400"><%= number_to_currency(pagamento_venda.recalculo) if pagamento_venda.recalculo %></td>
-    <td style="color:#006400"><%= number_to_currency(pagamento_venda.valor_pago) if pagamento_venda.valor_pago %></td>
+    <td style="color:#006400"><%= pagamento_venda.valor.real_formatado if pagamento_venda.valor %></td>        
+    <td style="color:#006400"><%= pagamento_venda.recalculo.real_formatado if pagamento_venda.recalculo %></td>
+    <td style="color:#006400"><%= pagamento_venda.valor_pago.real_formatado if pagamento_venda.valor_pago %></td>
    	<td><% if pagamento_venda.data_pagamento_cliente.blank? %>
    		<%= link_to t('botao.pagar'), edit_pagamento_venda_path(pagamento_venda)%><% end %></td>
 	<td><% if !pagamento_venda.data_pagamento_cliente.blank? %><%= link_to t('botao.desfazer'), pagamento_venda_path(pagamento_venda,:acao => 'desfazer'), confirm: 'Tem certeza que deseja desfazer o pagamento ?', method: :delete %><% end %></td>
