--- a/app/views/vendas/index.html.erb
+++ b/app/views/vendas/index.html.erb
@@ -33,7 +33,7 @@
     <td style="color:#666"><%= venda.cliente.nome if venda.cliente %></td>
     <td style="color:#666"><%= venda.vendedor.nome if venda.vendedor %></td>
     <td style="color:#1E90FF"><%= I18n.l(venda.data) if venda.data %></td> 
-    <td style="color:#006400"><%= number_to_currency(venda.total_vendido) %></td>
+    <td style="color:#006400"><%= venda.total_vendido.real_formatado if venda.total_vendido %></td>
     <td style="color:#666"><%= show_obs(venda.observacao) %></td>
     <td><%= link_to t('botao.detalhes'), venda %></td>
     <td><%= link_to t('botao.editar'), edit_venda_path(venda)%></td>
