--- a/app/views/vendedores/_form.html.erb
+++ b/app/views/vendedores/_form.html.erb
@@ -30,7 +30,7 @@
           <div class="clearfix">    
    	     <%= f.label :telefone %>
 		<div class="input">
-	     <%= f.text_field :telefone, :alt => 'phone' %>
+	     <%= f.text_field :telefone, :class => 'mask-phone' %>
 	    </div>
       </div>
           <div class="clearfix">    
@@ -72,6 +72,5 @@
 <script>
 
  $('#vendedor_nome').focus();
- $('#vendedor_telefone').setMask();
-
+ 
 </script>
