--- a/app/views/compras/show.html.erb
+++ b/app/views/compras/show.html.erb
@@ -20,17 +20,22 @@
 
 	<p>
 	  <b><%= t('compra.total_despesas')%>:</b>
-	  <span style="color:#006400"><%= @compra.total_despesas.real_formatado if @compra.total_despesas %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_despesas) if @compra.total_despesas %></span>
 	</p>
  
 	<p>
 	  <b><%= t('compra.com_retorno')%>:</b>
-	  <span style="color:#006400"><%= @compra.total_com_retorno.real_formatado if @compra.total_com_retorno %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_com_retorno) if @compra.total_com_retorno %></span>
 	</p>
 	
 	<p>
 	  <b><%= t('compra.sem_retorno')%>:</b>
-	  <span style="color:#006400"><%= @compra.total_sem_retorno.real_formatado if @compra.total_sem_retorno %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_sem_retorno) if @compra.total_sem_retorno %></span>
+	</p>
+
+	<p>
+	  <b><%= t('compra.percentual_despesa')%>:</b>
+	  <span style="color:#006400"><%= number_to_percentage(@compra.calcula_percentual_despesa) %></span>
 	</p>
 
 	<p>
@@ -42,15 +47,15 @@
 	<h4>Previsão</h4><br>
 	<p>
 	  <%= t('compra.vendas')%>:
-	  <span style="color:#006400"><%= @compra.total_retorno_produtos.real_formatado if @compra.total_retorno_produtos %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_retorno_produtos) if @compra.total_retorno_produtos %></span>
 	</p>
 	
 	<p>
 	  <%= t('compra.lucro')%>:
 	  <% if @compra.total_lucro > 0 %>
-	  <span style="color:#006400"><%= @compra.total_lucro.real_formatado if @compra.total_lucro %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_lucro) if @compra.total_lucro %></span>
 	  <% else %> 
-	  <span style="color:red"><%= @compra.total_lucro.real_formatado if @compra.total_lucro %></span>
+	  <span style="color:red"><%= formata_float(@compra.total_lucro) if @compra.total_lucro %></span>
 	  <% end %>
 	</p>
 	
@@ -86,15 +91,15 @@
 	<h4>Real</h4><br>
 	<p>
 	  <%= t('compra.vendas')%>:
-	  <span style="color:#006400"><%= @compra.total_vendido.real_formatado if @compra.total_vendido %></span>
+	  <span style="color:#006400"><%= formata_float(@compra.total_vendido) if @compra.total_vendido %></span>
 	</p>
 	
 	<p>
 	  <%= t('compra.lucro')%>:
 	  <% if @compra.lucro_real > 0 %>
-	   <span style="color:#006400"><%= @compra.lucro_real.real_formatado if @compra.lucro_real %></span>
+	   <span style="color:#006400"><%= formata_float(@compra.lucro_real) if @compra.lucro_real %></span>
 	  <% else %>
-		<span style="color:red"><%= @compra.lucro_real.real_formatado if @compra.lucro_real %></span>
+		<span style="color:red"><%= formata_float(@compra.lucro_real) if @compra.lucro_real %></span>
 	  <% end %>
 	</p>
 	
@@ -157,7 +162,7 @@
 	    <tr>
 	    	<td colspan="4">&nbsp;</td>
 	        <td>TOTAL</td>
-	        <td style="color:#006400"><b><%= @compra.total_despesas.real_formatado if @compra.total_despesas %></b></td>  
+	        <td style="color:#006400"><b><%= formata_float(@compra.total_despesas) if @compra.total_despesas %></b></td>  
 			<td colspan="3">&nbsp;</td>
 	    </tr>	
     </table>
