--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@ jQuery(function($) {
 			<li class='<%=@class_despesa %>' ><a href="/despesas"><%= t("app.menu.despesa") %></a></li>
 			<li class='<%=@class_produto %>' ><a href="/produtos"><%= t("app.menu.produto") %></a></li>
 			<li class='<%=@class_pagamento_venda %>' ><a href="/pagamento_vendas"><%= t("app.menu.pagamento") %></a></li>
+			<li class='<%=@class_analise %>' ><a href="/analise"><%= t("app.menu.analise") %></a></li>
 			<li class="<%=@class_categoria %><%=@class_cor %><%=@class_marca %><%=@class_tamanho %><%=@class_tipo_despesa %><%=@class_vendedor %><%=@class_fornecedor %>">
 		    	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 			          <%= t("app.menu.administracao") %>
