Correcao formula em Produtos

--- a/app/views/produtos/index.html.erb
+++ b/app/views/produtos/index.html.erb
@@ -64,3 +64,8 @@
 
 <a href="<%= new_produto_path %>">
 	<button class="btn" name="btnpesquisa"><%= t('produto.acao.novo')%></button></a>
+
+<script> 
+
+$('#produto_codigo_interno').focus();
+</script>	
